[package]
name = "bufstream"
version = "0.1.4"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/bufstream"
homepage = "https://github.com/alexcrichton/bufstream"
documentation = "https://docs.rs/bufstream"
description = """
Buffered I/O for streams where each read/write half is separately buffered
"""

[dependencies.futures]
optional = true
version = "0.1.13"

[dependencies.tokio-io]
optional = true
version = "0.1.1"

[features]
default = ["std", "mesalock_sgx"]
std = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
tokio = ["futures", "tokio-io"]

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
